// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Matches snapshots when active 1`] = `
<div
  class="./src/shared/components/Button/style.scss__button__IjQROZ AD_TAG HOC_TAG BUTTON_CLASS ./src/shared/components/Button/style.scss__active__+S7U9j AD_TAG HOC_TAG ACTIVE_CLASS"
  role="button"
  tabindex="0"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 1`] = `
<div
  class="./src/shared/components/Button/style.scss__button__IjQROZ AD_TAG HOC_TAG BUTTON_CLASS ./src/shared/components/Button/style.scss__disabled__ZsURaG AD_TAG HOC_TAG DISABLED_CLASS"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 2`] = `
<div
  class="./src/shared/components/Button/style.scss__button__IjQROZ AD_TAG HOC_TAG BUTTON_CLASS ./src/shared/components/Button/style.scss__disabled__ZsURaG"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when rendered as link 1`] = `
<a
  class="./src/shared/components/Button/style.scss__button__IjQROZ AD_TAG HOC_TAG BUTTON_CLASS ./src/shared/components/Button/style.scss__active__+S7U9j AD_TAG HOC_TAG ACTIVE_CLASS"
  href="/SOME/TEST/URL"
>
  BUTTON
</a>
`;
